--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <header class="hero-section">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <h1 class="hero-title">Your <span class="accent-text">Linq</span> to Energy News</h1>
-            <p class="hero-subtitle">Your daily source for curated energy news and market intelligence.</p>
+            <p class="hero-subtitle">My daily source for curated energy news and market intelligence.</p>
         </div>
     </header>
 
